Build with LTS versions of JDK (#465)